# OAI_CSINET

./: CMakeLists.txt  ai_fb_decoder.onnx  ai_fb_encoder.onnx  ai_fb_model.txt  ai_fb_model_angular.txt  ai_fb_model_refinenet.txt
ci-scripts/: Jenkinsfile-GitLab-Container  cls_containerize.py  cls_loganalysis.py  cls_oaicitest.py  main.py  ran.py
ci-scripts/conf_files/: nrue.uicc.conf
ci-scripts/tests/: README.md  log-analysis.py
ci-scripts/xml_files/: gnb_phytest_rfemulator_run_100_2x2.xml  gnb_phytest_usrp_run.xml  gnb_phytest_usrp_run_100_2x2.xml  gnb_phytest_usrp_run_60.xml  gnb_phytest_usrp_run_60_2x2.xml
cmake_targets/tools/: build_helper
common/utils/: CMakeLists.txt
doc/: CSI_RS_CONFIG_WALKTHROUGH_gnb_band78_rfsim.md  CSI_RS_IMSCOPE_FFT_INDEX_AND_BWP.md  NR_2X4_CSI_MIMO_IMPLEMENTATION_PLAN.md  NR_4X4_2X4_CSI_INDUSTRY_RESEARCH_PROGRESS.md  NR_4X4_2X4_CSI_PROGRESS_PRESENTATION.md  NR_4X4_CSI_IMPLEMENTATION_REFERENCE.md  NR_4X4_CSI_MIMO_MODIFICATIONS.md  ORAN_FHI7.2_Tutorial.md  RUN_NR_PRS.md  TESTBenches.md  export-modifications.sh  oai-base-commit.txt
doc/InterDigital_WI/: 5G_CHANNELS_IMPLEMENTATION_AND_TRACING_GUIDE.md  5G_STACK_ARCHITECTURE_AND_DATA_FLOW.md  AI_CSI_LINEAR_ULSCH_IMPLEMENTATION_CHANGELOG.md  AI_ENABLED_CSI_FEEDBACK_FROM_PAPER.md  COLoRIS_DITHER_STATIC_OBJECT_DRAFT.aux  COLoRIS_DITHER_STATIC_OBJECT_DRAFT.tex  (+23 more)
executables/: nr-ru.c  nr-ue-ru.c  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  softmodem-common.c  softmodem-common.h
tests/: CMakeLists.txt
tests/ai_fb/: CMakeLists.txt  test_ai_fb_codec.c
tools/: validate_2x4_csi_logs.sh
(+138 files in other folders)
